--- a/timeApp/public/index.html
+++ b/timeApp/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Micro App Container</title>
+    <title>Time App</title>
   </head>
   <body>
     <div id="container"></div>
