--- a/best-practices-micro/public/index.html
+++ b/best-practices-micro/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <title>React App</title>
+    <base href="/" />
   </head>
   <body>
     <div id="micro-root"></div>
