--- a/container-craco/public/index.html
+++ b/container-craco/public/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <title>create-react-app</title>
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
